# Sion

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.en.md  README.md  RELEASE.md  USER_GUIDE.md  WORKBENCH_REDESIGN.md  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: desktop-spike.yml  desktop.yml  release-windows.yml  release.yml
agents/: 01-basic-info.md  02-goals.md  03-roles-permissions.md  04-business-flow.md  05-feature-design.md  06-page-interaction.md  07-data-structure.md  08-api-design.md  09-architecture-deployment.md  10-development-tasks.md  11-risks-open-questions.md  12-final-export.md
assets/agents/: 01-basic-info.md  02-goals.md  03-roles-permissions.md  04-business-flow.md  05-feature-design.md  06-page-interaction.md  07-data-structure.md  08-api-design.md  09-architecture-deployment.md  10-development-tasks.md  11-risks-open-questions.md  12-final-export.md
assets/export/: blueprint.md  draft.md  review-blueprint.md  review-draft.md
crates/sion-agent/: Cargo.toml
crates/sion-agent/src/: lib.rs  model_stream.rs
crates/sion-core/: Cargo.toml
crates/sion-core/src/: conversation.rs  conversation_telemetry.rs  conversation_turn.rs  lib.rs
crates/sion-storage/: Cargo.toml
crates/sion-storage/src/: export_store.rs  lib.rs
desktop/: README.md  package-lock.json  package.json
desktop-spike/: README.md  index.html  package-lock.json  package.json
desktop-spike/src/: App.tsx  styles.css
desktop-spike/src-tauri/: Cargo.toml  tauri.conf.json
desktop-spike/src-tauri/capabilities/: default.json
desktop-spike/src-tauri/src/: keyring_check.rs  lib.rs  main.rs  migration.rs  provider_migration.rs  provider_settings.rs  streaming.rs
desktop/src/: styles.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: provider_settings.rs
docs/superpowers/plans/: 2026-06-14-sion-chat-sessions-plan.md  2026-06-21-agent-web-access.md  2026-06-22-chat-experience-upgrade.md  2026-07-16-sion-codex-ui-redesign.md  2026-07-17-conversation-model-context-files.md  2026-07-17-sion-workspace-navigation-preview.md  2026-07-18-live-reasoning-provider-errors.md  2026-07-19-export-center-project-list-entry.md  2026-07-19-export-center-redesign.md  2026-07-19-export-center-ux-hardening.md
docs/superpowers/specs/: 2026-06-14-sion-chat-sessions-design.md  2026-06-21-agent-web-access-design.md  2026-06-22-chat-experience-design.md  2026-06-23-project-assets-design.md  2026-07-16-sion-codex-ui-redesign-design.md  2026-07-17-conversation-model-context-files-design.md  2026-07-17-sion-workspace-navigation-preview-design.md  2026-07-18-conversation-card-default-open-design.md  2026-07-18-conversation-context-presets-run-details-design.md  2026-07-18-conversation-turn-delivery-feedback-design.md  2026-07-18-live-reasoning-provider-errors-design.md  (+4 more)
fixtures/: validate-fixtures.mjs
fixtures/contracts/: legacy-layout.md  migration-expectations.md
scripts/: verify-no-browser-runtime.mjs  verify-no-legacy-migration-runtime.mjs  verify-storage-contract.mjs
src/: App.tsx  api.ts  conversation-controls.ts  conversation-turns.ts  delivery-generation.ts  export-diff.ts  export-state.ts  markdown-policy.ts  reasoning-stream.ts  styles.css  types.ts  ui-state.ts  workspace-config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_paths.rs  app_settings.rs  conversation_runtime.rs  dependency_context.rs  docx_check.rs  docx_preview.rs  export_documents.rs  export_runtime.rs  keyring_check.rs  lib.rs  main.rs  migration.rs  project_export.rs  provider_settings.rs  run_detail.rs  turn_runtime.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: FilePreviewPane.tsx  LandingPage.tsx  ProviderManager.tsx  SettingsDialog.tsx  Workbench.tsx
src/components/app/: AppShell.tsx  (+7 more)
src/styles/: dialogs.css  export.css  primitives.css  responsive.css  shell.css  tokens.css  workspace.css
src/test/: setup.ts
templates/: project-design-word.md
tests/: conversation-controls.test.ts  conversation-turns.test.ts  delivery-generation.test.ts  export-diff.test.ts  export-state.test.ts  markdown-policy.test.ts  popover-state.test.ts  reasoning-stream.test.ts  ui-state.test.ts  workspace-config.test.ts  workspace-regressions.test.ts
(+243 files in other folders)
