[workspace]
resolver = "3"
members = [
  "crates/sion-core",
  "crates/sion-storage",
  "crates/sion-agent",
]
exclude = ["desktop-spike/src-tauri"]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4"] }
