[workspace]
resolver = "3"
members = [
  "crates/sion-core",
  "crates/sion-storage",
  "crates/sion-agent",
]
exclude = ["desktop/src-tauri"]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.18"
calamine = "0.26.1"
pdf-extract = "0.7.11"
zip = "0.6.6"
