[package]
name = "sion-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
sion-core = { path = "../sion-core" }
