[package]
name = "sion-desktop-spike"
version = "0.0.1"
description = "Sion desktop reliability spike"
authors = ["Sion"]
edition = "2024"

[lib]
name = "sion_desktop_spike_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
image = "0.25.10"
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
docx-rs = "0.4.20"
futures-util = "0.3.31"
keyring = "4.1.5"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.5", features = [] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.18"
uuid = { version = "1.21.0", features = ["v4"] }
zip = "0.6.6"
